--- a/ui/src/assets/global.css
+++ b/ui/src/assets/global.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;700&display=swap');
 *{
     margin:0;
     padding:0;
@@ -5,8 +6,11 @@
 
 html{
     scroll-behavior: smooth;
+
 }
 
 body{
     overflow-y: hidden;
+    font-family: 'Rubik', Courier, monospace;
+    color: #252525ec;
 }
