--- a/ui/src/assets/global.css
+++ b/ui/src/assets/global.css
@@ -1,16 +1,16 @@
-@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;700&display=swap');
-*{
-    margin:0;
-    padding:0;
+@import url("https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;700&display=swap");
+* {
+  margin: 0;
+  padding: 0;
 }
 
-html{
-    scroll-behavior: smooth;
-
+html {
+  scroll-behavior: smooth;
+  overflow: hidden;
 }
 
-body{
-    /* overflow-y: hidden; */
-    font-family: 'Rubik', Courier, monospace;
-    color: #252525ec;
+body {
+  /* overflow-y: hidden; */
+  font-family: "Rubik", Courier, monospace;
+  color: #252525ec;
 }
